@@ -36,6 +36,7 @@
 """
 import sys
 from .. import reporters
+import time
 
 
 def _fprint(fmt, *args):
@@ -60,6 +61,9 @@ class Plugin(object):
                     "title" : "Title",
                     "info"  : "Some info",
                     "category" : "PyCounters"
+                    "pyc_ignore_zero_value": False, # tells the munin plugin not to output anything the counter value
+                                                    # is zero. Handy for counter where zero means nothing happened like
+                                                    # Ex. average request time
                 },
                 "data" : [
                     {
@@ -79,9 +83,16 @@ class Plugin(object):
 
     """
 
-    def __init__(self, json_output_file=None, config=None):
+    def __init__(self, json_output_file=None, config=None,max_file_age_in_seconds=15*60):
+        """
+           :param json_output_file: a PyCounter report file generated by the :obj:`pycounters.reporters.JSONFileReporter`
+           :param config: a configuration diction defining the different graphs. See class documentation.
+           :param max_file_age_in_seconds: reports older than this age are ignored to avoid exporting old data
+                to munin. Set to None to disable this functionality.
+        """
         self.output_file = json_output_file
         self.config = config
+        self.max_file_age_in_seconds = max_file_age_in_seconds
 
     def counter_id_to_munin_id(self, counter_id):
         return counter_id.replace(" ", "_").replace(".", "_")
@@ -91,6 +102,15 @@ class Plugin(object):
         """
 
         values = reporters.JSONFileReporter.safe_read(self.output_file)
+
+        if self.max_file_age_in_seconds:
+            collection_time = values.get("__collection_time__",None)
+            if collection_time is None:
+                raise Exception(("JSON file %s was outputed by an old version of PyCounters, please upgrade to use"+
+                                "max_file_age_in_seconds feature.") % (self.output_file,))
+            if time.time() - collection_time > self.max_file_age_in_seconds:
+                return # json file is too old.
+
         for graph in config:
             if not graph.get("id"):
                 raise Exception("Missing graph id")
@@ -98,7 +118,7 @@ class Plugin(object):
             for data in graph.get("data"):
                 counter = data.get("counter")
                 v = values.get(counter)
-                if v is not None:
+                if (v is not None) and (float(v) != 0.0 or not graph["global"].get("pyc_ignore_zero_value",False)):
                     _fprint("%s.value %s", self.counter_id_to_munin_id(counter), v)
 
     def output_config(self, config):
