@@ -5,6 +5,8 @@
     - shortcut decorators now take the name of the function they wrap as a default event name
     - Added a role option to multi process reporting initializations.
     - Made all report_* and shortcuts decorators usable as context managers.
+    - Munin plugin now ignores old reports by default
+    - Munin plugin now has the option not to output zero values. Handy for counters where a value of 0 means nothing happened.
 
 0.3:
     - Added a manifest.in file, so that CHANGES.txt will come along.
